--- a/Web/package.json
+++ b/Web/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "serve": "webpack serve --mode development",
     "dev": "webpack serve --config ./src/index.js",
-    "dev-unix": "if [ ! -d node_modules ]; then npm install; fi && cd ../API && if [ ! -d node_modules ]; then npm install; fi && cd ../Web && concurrently \"npm run api-unix\" \"npm run serve\"",
+    "dev-unix": "if [ ! -d node_modules ]; then npm install; fi && cd ../API && if [ ! -d node_modules ]; then npm install; fi && node ShortyShortAPI.js validate && cd ../Web && concurrently \"npm run api-unix\" \"npm run serve\"",
     "dev-windows": "cmd /c LaunchWindowsBuildDev.cmd",
     "run-unix": "if [ ! -d node_modules ]; then npm install; fi && npm run build && cd ../API && if [ ! -d node_modules ]; then npm install; fi && nodemon ShortyShortAPI.js",
     "run-windows": "cmd /c LaunchWindowsBuild.cmd",
